# warehouse_project

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py
attach_shelf/src/: approach_service_server.cpp  pre_approach_v2.cpp
attach_shelf/srv/: GoToLoading.srv
cartographer_slam/config/: cartographer_real.lua  cartographer_sim.lua  warehouse_map_keepout_sim.pgm  warehouse_map_keepout_sim.yaml  warehouse_map_real.pgm  warehouse_map_real_old_low_res.yaml  warehouse_map_sim.pgm
cartographer_slam/launch/: cartographer.launch.py
cartographer_slam/rviz/: mapping.rviz
localization_server/: setup.py
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml
localization_server/launch/: localization.launch.py  localization_real.launch.py
localization_server/rviz/: localizer_rviz_config.rviz  localizer_rviz_config_real.rviz
map_server/config/: pure_keepout_sim_ascii.pgm  pure_keepout_sim_ascii.yaml  pure_keepout_sim_raw.pgm  pure_keepout_sim_raw.yaml  warehouse_map_keepout_real.pgm  warehouse_map_keepout_real.yaml  warehouse_map_keepout_real_ascii.pgm  warehouse_map_keepout_real_ascii.yaml  warehouse_map_keepout_sim.yaml  warehouse_map_keepout_sim_ascii.pgm  warehouse_map_keepout_sim_ascii.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml
map_server/launch/: map_server.launch.py
map_server/rviz/: map_display.rviz
nav2_apps/: package.xml  setup.py
nav2_apps/config/: spot-list.yaml
nav2_apps/launch/: move_shelf.launch.py  move_shelf_all.launch.py  nav_to_pose.launch.py
nav2_apps/nav2_apps/: move_shelf_to_ship.py  move_shelf_to_ship_api.py  nav_to_pose.py
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
path_planner_server/config/: bt_navigator_real.yaml  bt_navigator_sim.yaml  controller_real.yaml  controller_sim.yaml  filters_real.yaml  planner_real.yaml  planner_sim.yaml  recoveries_real.yaml  recoveries_sim.yaml
path_planner_server/launch/: pathplanner.launch.py
path_planner_server/rviz/: pathplanning.rviz  pathplanning_real.rviz
